examples/test/testpolicy523.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy523
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key46: value0
      key43: value26
      key14: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value26
          key45: value29
      podSelector:
        matchLabels:
          key43: value49
          key49: value33
